fixes 'hiding navigation' on smaller screens

--- a/source/assets/stylesheets/_blog.css.scss
+++ b/source/assets/stylesheets/_blog.css.scss
@@ -50,7 +50,7 @@ article {
   .social {
     float: right;
 
-    @media screen and (max-width: 550px) {
+    @media screen and (max-width: 700px) {
       display: none;
     }
   }
